# nerve-tui

./: .gitignore  Cargo.toml  GEMINI.md  README.md
.claude/: settings.local.json
ai/: ai.md
crates/nerve-tui/: Cargo.toml
crates/nerve-tui-bin/: Cargo.toml
crates/nerve-tui-bin/src/: main.rs
crates/nerve-tui-core/: Cargo.toml
crates/nerve-tui-core/src/: lib.rs  mock.rs  transport.rs  ws_client.rs
crates/nerve-tui-core/tests/: integration_server.rs
crates/nerve-tui-protocol/: Cargo.toml
crates/nerve-tui-protocol/src/: jsonrpc.rs  lib.rs  types.rs
crates/nerve-tui/src/: app.rs  buffer.rs  clipboard.rs  config.rs  event_source.rs  layout.rs  lib.rs  theme.rs
crates/nerve-tui/src/app/: app_state.rs  event_handler.rs  mod.rs  renderer.rs
crates/nerve-tui/src/components/: block_renderer.rs  channel_view.rs  diff_view.rs  dm_view.rs  input.rs  message_list.rs  messages.rs  mod.rs  render_cache.rs  spinner.rs  status_bar.rs
docs/: PLAN-dm-enhance.md  TODO.md
scripts/: build.sh  install.sh  update.sh
