[package]
name = "nerve-tui-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
nerve-tui-protocol.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
