[package]
name = "nerve-tui"
version = "0.1.0"
edition.workspace = true

[dependencies]
nerve-tui-protocol.workspace = true
nerve-tui-core.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
unicode-width.workspace = true
regex.workspace = true
pulldown-cmark = "0.12"
syntect.workspace = true
arboard.workspace = true
image.workspace = true
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
nerve-tui-core = { workspace = true, features = ["test-utils"] }
